# Swarm-Control-System

./: .gitignore  README.md  cv_track_demo.py  postprocess.py  pyproject.toml  sample_gt.csv
config/: README.md
configs/: README.md  drone.yaml
coverr_city_walk_v6/: tracks.csv  tracks_per_id.csv  tracks_summary.csv
coverr_highway_overpass_v6/: tracks.csv  tracks_per_id.csv  tracks_summary.csv
coverr_road_traffic_v6/: tracks.csv  tracks_per_id.csv  tracks_summary.csv
coverr_tram_city_v6/: tracks.csv  tracks_per_id.csv  tracks_summary.csv
cvtrack/: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
cvtrack/configs/: default.yaml  drone.yaml  multi_sensor.yaml  street.yaml
cvtrack/eval/mot17_mini/: run_eval.py
cvtrack/scripts/: VISDRONE_COMPARE_README.md  benchmark.py  collect_stats.py  download_weights.py  setup_visdrone_compare.sh  visdrone_compare.py
cvtrack/src/cvtrack/: __init__.py  __main__.py  config.py  pipeline.py  postprocess.py
cvtrack/src/cvtrack/appearance/: base.py  factory.py
cvtrack/src/cvtrack/detector/: factory.py
cvtrack/src/cvtrack/sensors/: __init__.py  base.py  video.py
cvtrack/src/cvtrack/tracker/: deepsort.py  metrics.py  smoother.py
cvtrack/src/cvtrack/viz/: renderer.py
cvtrack/tests/: conftest.py  test_appearance.py  test_config.py  test_gallery.py  test_kalman.py  test_metrics_idf1.py  test_sensors.py  test_smoother.py
docs/: containment_model.md
docs/architecture/: README.md
docs/interface/: ROS2节点设计V1.md  TargetTrack接入总结.md  Topic接口设计V1.md  Topic接口设计V2.md  YOLOv8-DeepSORT-ROS2接入文档.md  感知组优化工作总结.md
eval/mot17_mini/: synthetic.py
modules/: README.md
pexels_aerial_2034115_v4/: tracks.csv
pexels_aerial_2034115_v5/: tracks.csv  tracks_per_id.csv  tracks_summary.csv
pexels_aerial_2257013_v5/: tracks.csv  tracks_per_id.csv  tracks_summary.csv
pexels_pedestrian_crossing_out/: tracks.csv  tracks_per_id.csv  tracks_summary.csv
pexels_pedestrian_crossing_v6/: tracks.csv  tracks_per_id.csv  tracks_summary.csv
ros2_ws/: README.md
ros2_ws/src/containment_pkg/: README.md  package.xml  setup.cfg  setup.py  static_voronoi_uav.py
ros2_ws/src/perception_pkg/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/perception_pkg/config/: tracker_node.yaml
ros2_ws/src/perception_pkg/cvtrack/: MIGRATION.md
ros2_ws/src/perception_pkg/cvtrack/.github/workflows/: ci.yml
ros2_ws/src/perception_pkg/cvtrack/configs/: README.md  optimized.yaml
ros2_ws/src/perception_pkg/cvtrack/eval/: README.md
ros2_ws/src/perception_pkg/cvtrack/eval/mot17_mini/: README.md
ros2_ws/src/perception_pkg/cvtrack/src/cvtrack/: io.py  types.py
ros2_ws/src/perception_pkg/cvtrack/src/cvtrack/appearance/: gallery.py  osnet.py
ros2_ws/src/perception_pkg/cvtrack/src/cvtrack/detector/: __init__.py  base.py
ros2_ws/src/perception_pkg/cvtrack/src/cvtrack/tracker/: __init__.py  adaptive_tracker.py  botsort.py  kalman.py  stability.py  trajectory.py
ros2_ws/src/perception_pkg/cvtrack/src/cvtrack/viz/: __init__.py  styles.py
ros2_ws/src/perception_pkg/cvtrack/tests/: test_integration.py  test_kalman_optimization.py  test_pipeline_smoke.py
ros2_ws/src/perception_pkg/launch/: tracker_node.launch.py
ros2_ws/src/perception_pkg/perception_pkg/: __init__.py  tracker_node.py
ros2_ws/src/planning_pkg/: README.md
ros2_ws/src/scheduler_pkg/: README.md
ros2_ws/src/swarm_interfaces/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/swarm_interfaces/msg/: EnclosureTarget.msg  EnclosureTargetArray.msg  TargetTrack.msg  TargetTrackArray.msg  TaskAssignment.msg
scripts/: README.md  VISDRONE_COMPARE_README.md  run_cvtrack.sh  summarise_v6_runs.py  visdrone_compare.py
simulation/: README.md
simulation/maps/: README.md
src/cvtrack/: __init__.py  config.py  io.py  pipeline.py
src/cvtrack/appearance/: __init__.py  factory.py  histogram.py  osnet.py
src/cvtrack/detector/: yolo.py
src/cvtrack/tracker/: __init__.py  cmc.py  deepsort.py  kalman.py  metrics.py
src/cvtrack/viz/: renderer.py
tests/: test_config.py  test_kalman.py  test_metrics.py
videos/: README.md
web/: README.md
weights/: COMPARE_REPORT.md  summary.json  v6_runs_summary.json
weights/all_runs/: stats_summary.json
weights/all_runs/coverr_city_walk/: tracks.csv
weights/all_runs/coverr_highway_overpass/: tracks.csv
weights/all_runs/coverr_road_traffic/: tracks.csv
weights/all_runs/coverr_tram_city/: tracks.csv
weights/all_runs/pexels_aerial_2034115/: tracks.csv
weights/all_runs/pexels_aerial_2257013/: tracks.csv
weights/all_runs/pexels_pedestrian_crossing/: tracks.csv
weights/all_runs/sintel_trailer/: tracks.csv
weights/run_01/: tracks.csv
weights/run_03/: tracks.csv
weights/run_botsort/: tracks.csv  tracks_future.csv  tracks_smoothed.csv  tracks_trails.json
weights/run_deepsort_cascade/: tracks.csv  tracks_future.csv  tracks_smoothed.csv  tracks_trails.json
weights/run_deepsort_cascade_drone/: tracks.csv  tracks_future.csv  tracks_smoothed.csv  tracks_trails.json
weights/run_deepsort_legacy/: tracks.csv  tracks_future.csv  tracks_smoothed.csv  tracks_trails.json
weights/yolo_runs/: all_results.json
weights/yolo_runs/coverr_city_walk__yolo_coco/: tracks.csv
weights/yolo_runs/coverr_city_walk__yolo_visdrone/: tracks.csv
weights/yolo_runs/coverr_highway_overpass__yolo_coco/: tracks.csv
weights/yolo_runs/coverr_highway_overpass__yolo_visdrone/: tracks.csv
weights/yolo_runs/coverr_road_traffic__yolo_coco/: tracks.csv
weights/yolo_runs/coverr_road_traffic__yolo_visdrone/: tracks.csv
weights/yolo_runs/coverr_tram_city__yolo_coco/: tracks.csv
weights/yolo_runs/coverr_tram_city__yolo_visdrone/: tracks.csv
weights/yolo_runs/pexels_aerial_2034115__yolo_coco/: tracks.csv
weights/yolo_runs/pexels_aerial_2034115__yolo_visdrone/: tracks.csv
weights/yolo_runs/pexels_aerial_2257013__yolo_coco/: tracks.csv
weights/yolo_runs/pexels_aerial_2257013__yolo_visdrone/: tracks.csv
weights/yolo_runs/pexels_pedestrian_crossing__yolo_coco/: tracks.csv
(+3 files in other folders)
