<?xml version="1.0"?>

<package format="3">

  <name>containment_pkg</name>

  <version>0.0.0</version>

  <description>
    UAV Voronoi containment package
  </description>

  <maintainer email="your@email.com">
    chen
  </maintainer>

  <license>Apache-2.0</license>


  <depend>rclpy</depend>


  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
