<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>perception_pkg</name>
  <version>0.1.0</version>
  <description>
    Perception pipeline: YOLOv8 detection + DeepSORT / BoT-SORT tracking,
    publishing per-frame target tracks to the swarm via
    swarm_interfaces/TargetTrackArray.
  </description>

  <maintainer email="swarm@example.com">Swarm Control System Team</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>swarm_interfaces</depend>

  <!-- The tracker_node imports cvtrack (cv_tracking_demo). The user must
       install the package via `pip install -e ~/Downloads/cv_tracking_demo`
       (or whatever path is configured) before launching this node. -->
  <exec_depend>cvtrack</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>